header-and-navigation changes

--- a/Team-Project/index.html
+++ b/Team-Project/index.html
@@ -9,14 +9,105 @@
   </head>
   <body>
     <!-- Header with navigation menu -->
-
-    <header class="wrapper">
-      <nav></nav>
-      Юля
+    <header>
+      <div class="wrapper">
+        <div class="heading">
+          <div class="logo-block">
+            <img src="assets/icons/logo.svg" alt="logo" class="logo" />
+            <p>Boldo</p>
+          </div>
+          <nav>
+            <a href="#">Product</a>
+            <a href="#">Services</a>
+            <a href="#">About</a>
+            <button>Log In</button>
+          </nav>
+        </div>
+      </div>
     </header>
-
     <!-- Intro -->
-    <div class="intro">Юля</div>
+    <div class="intro">
+      <div class="wrapper">
+        <div class="intro-block">
+          <div class="main-information">
+            <div class="about-us">
+              <div class="text-block">
+                <p class="title">
+                  Save time by building fast with Boldo Template
+                </p>
+                <p class="description">
+                  Funding handshake buyer business-to-business metrics iPad
+                  partnership.
+                  <br />
+                  <br />
+                  First mover advantage innovator success deployment
+                  non-disclosure.
+                </p>
+              </div>
+              <div class="buttons-group">
+                <button class="green">Buy template</button>
+                <button class="transparent">Explore</button>
+              </div>
+            </div>
+            <div class="chart">
+              <div>
+                <img
+                  src="assets/images/horizontal-chart.png"
+                  alt="horizontal-chart"
+                />
+              </div>
+              <div class="chart-block">
+                <img
+                  src="assets/images/vertical-chart.png"
+                  alt="vertical-chart"
+                />
+                <img src="assets/images/pie-chart.png" alt="pie-chart" />
+              </div>
+            </div>
+          </div>
+          <div class="partners">
+            <ul>
+              <li>
+                <svg>
+                  <use xlink:href="assets/icons/sprite.svg#boldo"></use>
+                </svg>
+                Boldo
+              </li>
+              <li>
+                <svg>
+                  <use xlink:href="assets/icons/sprite.svg#presto"></use>
+                </svg>
+                Presto
+              </li>
+              <li>
+                <svg>
+                  <use xlink:href="assets/icons/sprite.svg#boldo"></use>
+                </svg>
+                Boldo
+              </li>
+              <li>
+                <svg>
+                  <use xlink:href="assets/icons/sprite.svg#presto"></use>
+                </svg>
+                Presto
+              </li>
+              <li>
+                <svg>
+                  <use xlink:href="assets/icons/sprite.svg#boldo"></use>
+                </svg>
+                Boldo
+              </li>
+              <li>
+                <svg>
+                  <use xlink:href="assets/icons/sprite.svg#presto"></use>
+                </svg>
+                Presto
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Content -->
 
